--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -60,11 +60,11 @@ RUN npm install && npm run build && npm pack
 
 FROM node:20-bullseye-slim as release
 WORKDIR /app
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/frontend/build ./frontend/build
-RUN npm link
+# COPY --from=builder /app/package.json ./
+# COPY --from=builder /app/dist ./dist
+# COPY --from=builder /app/node_modules ./node_modules
+# COPY --from=builder /app/frontend/build ./frontend/build
+# RUN npm link
 
 COPY --from=builder /app/*.tgz .
 RUN npm -g install *.tgz
@@ -81,71 +81,6 @@ COPY --from=builder /matterbridge-eve-room/*.tgz .
 COPY --from=builder /matterbridge-eve-weather/*.tgz .
 RUN npm -g install *.tgz
 RUN rm *.tgz 
-
-# WORKDIR /matterbridge-example-accessory-platform
-# COPY --from=builder /matterbridge-example-accessory-platform/dist ./dist
-# COPY --from=builder /matterbridge-example-accessory-platform/node_modules ./node_modules
-# COPY --from=builder /matterbridge-example-accessory-platform/package.json ./package.json
-# COPY --from=builder /matterbridge-example-accessory-platform/link-matterbridge-script.js ./link-matterbridge-script.js
-
-# WORKDIR /matterbridge-example-dynamic-platform
-# COPY --from=builder /matterbridge-example-dynamic-platform/dist ./dist
-# COPY --from=builder /matterbridge-example-dynamic-platform/node_modules ./node_modules
-# COPY --from=builder /matterbridge-example-dynamic-platform/package.json ./package.json
-# COPY --from=builder /matterbridge-example-dynamic-platform/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-zigbee2mqtt
-# COPY --from=builder /matterbridge-zigbee2mqtt/dist ./dist
-# COPY --from=builder /matterbridge-zigbee2mqtt/node_modules ./node_modules
-# COPY --from=builder /matterbridge-zigbee2mqtt/package.json ./package.json
-# COPY --from=builder /matterbridge-zigbee2mqtt/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-somfy-tahoma
-# COPY --from=builder /matterbridge-somfy-tahoma/dist ./dist
-# COPY --from=builder /matterbridge-somfy-tahoma/node_modules ./node_modules
-# COPY --from=builder /matterbridge-somfy-tahoma/package.json ./package.json
-# COPY --from=builder /matterbridge-somfy-tahoma/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-eve-door
-# COPY --from=builder /matterbridge-eve-door/dist ./dist
-# COPY --from=builder /matterbridge-eve-door/node_modules ./node_modules
-# COPY --from=builder /matterbridge-eve-door/package.json ./package.json
-# COPY --from=builder /matterbridge-eve-door/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-eve-motion
-# COPY --from=builder /matterbridge-eve-motion/dist ./dist
-# COPY --from=builder /matterbridge-eve-motion/node_modules ./node_modules
-# COPY --from=builder /matterbridge-eve-motion/package.json ./package.json
-# COPY --from=builder /matterbridge-eve-motion/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-eve-energy
-# COPY --from=builder /matterbridge-eve-energy/dist ./dist
-# COPY --from=builder /matterbridge-eve-energy/node_modules ./node_modules
-# COPY --from=builder /matterbridge-eve-energy/package.json ./package.json
-# COPY --from=builder /matterbridge-eve-energy/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-eve-room
-# COPY --from=builder /matterbridge-eve-room/dist ./dist
-# COPY --from=builder /matterbridge-eve-room/node_modules ./node_modules
-# COPY --from=builder /matterbridge-eve-room/package.json ./package.json
-# COPY --from=builder /matterbridge-eve-room/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# WORKDIR /matterbridge-eve-weather
-# COPY --from=builder /matterbridge-eve-weather/dist ./dist
-# COPY --from=builder /matterbridge-eve-weather/node_modules ./node_modules
-# COPY --from=builder /matterbridge-eve-weather/package.json ./package.json
-# COPY --from=builder /matterbridge-eve-weather/link-matterbridge-script.js ./link-matterbridge-script.js
-# RUN npm link
-
-# Set the working directory
-WORKDIR /app
 
 # CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
 CMD ["matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
