--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -58,13 +58,10 @@ COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
 RUN npm install && npm run build && npm pack
 
 
-FROM node:20-bullseye-slim as release
+# FROM node:20-bullseye-slim as release
+FROM node:20-alpine as release
 WORKDIR /app
-# COPY --from=builder /app/package.json ./
-# COPY --from=builder /app/dist ./dist
-# COPY --from=builder /app/node_modules ./node_modules
-# COPY --from=builder /app/frontend/build ./frontend/build
-# RUN npm link
+RUN apk add --no-cache icu-data-full
 
 COPY --from=builder /app/*.tgz .
 RUN npm -g install *.tgz
