chore: Update package.json dependencies

--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "matterbridge",
     "homebridge",
     "bridge",
+    "plugin",
     "frontend",
     "matterbridge",
     "matter.js",
     "matter-node.js",
+    "matter",
     "matterprotocol",
     "iot",
     "smarthome",
     "connectedthings",
-    "plugin"
+    "hap",
+    "homekit",
+    "google-home",
+    "alexa",
+    "homeassistant"
   ],
   "type": "module",
   "main": "dist/index.js",
