--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "matter-history": "file:../../matter-history",
-    "node-ansi-logger": "^1.9.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "checkDependencies": "npx npm-check-updates"
+
   },
   "eslintConfig": {
     "extends": [
