--- a/package.json
+++ b/package.json
@@ -62,38 +62,39 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "clean": "rimraf tsconfig.tsbuildinfo ./dist",
-    "cleanBuild": "npm run clean && tsc",
-    "deepClean": "rimraf tsconfig.tsbuildinfo package-lock.json ./dist ./node_modules",
+    "cleanBuild": "npm run clean && npm run build",
+    "deepClean": "rimraf tsconfig.tsbuildinfo package-lock.json ./dist ./node_modules && npm install && npm run build",
     "prepublishOnly": "npm run wtf:uninstall && npm uninstall matter-history && npm install matter-history && npm run lint && npm run cleanBuild",
     "checkDependencies": "npx npm-check-updates",
-    "updateDependencies": "npx npm-check-updates -u",
+    "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest && npm install && npm run build",
     "updateMatter:dev": "npm run deepClean && npm install @project-chip/matter-node.js@dev && npm install && npm run build",
     "wtf:install": "npm install wtfnode && npm install @types/wtfnode",
     "wtf:uninstall": "npm uninstall wtfnode && npm uninstall @types/wtfnode",
-    "version": "npm run build",
+    "preversion": "npm run build && npm run lint",
+    "postversion": "git push && git push --tags",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.0.0",
+    "@stylistic/eslint-plugin": "^2.1.0",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "^0.8.1",
+    "@project-chip/matter-node.js": "^0.9.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "matter-history": "^1.0.15",
+    "matter-history": "^1.1.0",
     "node-ansi-logger": "^1.9.5",
     "node-persist-manager": "^1.0.7",
     "ws": "^8.17.0"
