--- a/package.json
+++ b/package.json
@@ -80,20 +80,20 @@
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.3",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.13.0",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "^0.9.0",
+    "@project-chip/matter-node.js": "^0.9.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "matter-history": "^1.1.0",
+    "matter-history": "file:../matter-history",
     "node-ansi-logger": "^1.9.5",
     "node-persist-manager": "^1.0.7",
     "ws": "^8.17.0"
