--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -1,6 +1,6 @@
 FROM node:20-bullseye-slim as base
 WORKDIR /app
-RUN npm install -g npm@10.7.0
+# RUN npm install -g npm@10.7.0
 
 
 FROM base as builder
@@ -32,4 +32,4 @@ RUN npm -g install matterbridge-eve-room
 RUN npm -g install matterbridge-eve-weather
 
 WORKDIR /app
-CMD ["matterbridge", "-bridge", "-docker", "-frontend", "8283"]
+CMD ["matterbridge", "-bridge", "-docker"]
