--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -25,6 +25,7 @@ RUN npm -g install matterbridge-example-accessory-platform
 RUN npm -g install matterbridge-example-dynamic-platform
 RUN npm -g install matterbridge-zigbee2mqtt
 RUN npm -g install matterbridge-somfy-tahoma
+RUN npm -g install matterbridge-shelly
 RUN npm -g install matterbridge-eve-door
 RUN npm -g install matterbridge-eve-motion
 RUN npm -g install matterbridge-eve-energy
