--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -1,9 +1,9 @@
-FROM node:20-bullseye-slim as base
+FROM node:20-bullseye-slim AS base
 WORKDIR /app
 # RUN npm install -g npm@10.7.0
 
 
-FROM base as builder
+FROM base AS builder
 WORKDIR /app
 COPY ./package.json ./
 COPY ./tsconfig.json ./
@@ -12,7 +12,7 @@ COPY ./frontend/build ./frontend/build
 RUN npm install && npm run build && npm link
 
 
-FROM base as release
+FROM base AS release
 WORKDIR /app
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/dist ./dist
