Added -mdnsinterface command line parameter to limit the MdnsBroadcaster

--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "start:childbridge": "node ./dist/cli.js -childbridge",
     "start:controller": "node ./dist/cli.js -controller",
     "start:help": "node ./dist/cli.js -help",
-    "test": "jest",
-    "test:verbose": "jest --verbose",
-    "test:watch": "jest --watch",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
