--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "start:help": "node ./dist/cli.js -help",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridge.test.ts",
+    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgePlatform.test.ts",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "eslint --max-warnings=0 .",
