--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image to Docker Hub with buildx
+name: Build main and Push Docker image to Docker Hub with buildx
 
 on:
   push:
@@ -39,7 +39,7 @@ jobs:
           --platform linux/amd64,linux/arm64,linux/arm/v7 \
           -f docker/Dockerfile.main \
           -t luligu/matterbridge:latest \
-          -t luligu/matterbridge:1.3.11 \
+          -t luligu/matterbridge:1.3.12 \
           --push .
         docker manifest inspect luligu/matterbridge:latest
       timeout-minutes: 60  
