--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.3.11",
+  "version": "1.3.12",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -58,6 +58,10 @@
     "./cluster/*": {
       "import": "./dist/cluster/*.js",
       "types": "./dist/cluster/*.d.ts"
+    },
+    "./history": {
+      "import": "./dist/history/export.js",
+      "types": "./dist/history/export.d.ts"
     },
     "./logger": {
       "import": "./dist/logger/export.js",
@@ -117,7 +121,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "https": "^1.0.0",
-    "matter-history": "^1.1.2",
+    "matter-history": "^1.1.3",
     "node-ansi-logger": "^1.9.5",
     "node-persist-manager": "^1.0.7",
     "ws": "^8.18.0"
