--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,11 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        # the Node.js versions to build on
         node-version: [18.x, 20.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
