--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [18.x, 20.x, 21.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, debian-latest, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
