--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major",
-    "install:dependencies": "npm install @project-chip/matter-node.js body-parser express https matter-history node-ansi-logger node-persist-manager ws && npm install --save-dev rimraf",
+    "install:dependencies": "npm install @project-chip/matter-node.js express https matter-history node-ansi-logger node-persist-manager ws && npm install --save-dev rimraf",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
     "install:eslint": "npm install --save-dev @eslint/js @types/eslint__js typescript-eslint",
     "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier",
@@ -118,7 +118,6 @@
   },
   "dependencies": {
     "@project-chip/matter-node.js": "^0.9.3",
-    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "https": "^1.0.0",
     "matter-history": "^1.1.4",
