--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./utils/*": {
-      "import": "./dist/utils/*.js",
-      "types": "./dist/utils/*.d.ts"
-    },
     "./cluster/*": {
       "import": "./dist/cluster/*.js",
       "types": "./dist/cluster/*.d.ts"
+    },
+    "./utils": {
+      "import": "./dist/utils/export.js",
+      "types": "./dist/utils/export.d.ts"
     },
     "./history": {
       "import": "./dist/history/export.js",
@@ -81,12 +81,13 @@
     "start:controller": "node ./dist/cli.js -controller",
     "start:help": "node ./dist/cli.js -help",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridge.test.ts",
-    "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgeDevice.test.ts",
-    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridge.test.ts",
+    "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgeDevice.test.ts",
+    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
+    "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js utils.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
