Refactor cleanup to avoid timeouts

--- a/package.json
+++ b/package.json
@@ -84,9 +84,9 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridge.test.ts",
-    "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgeDevice.test.ts",
-    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
+    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose matterbridge.test.ts",
+    "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose matterbridgeDevice.test.ts",
+    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js utils.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
