--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --coverage",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --watch",
-    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose matterbridge.test.ts",
+    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridge.test.ts",
     "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose matterbridgeDevice.test.ts",
     "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose utils.test.ts",
