--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Fix npm permissions
+        run: sudo chown -R $USER:$(id -gn $USER) /Users/runner/.npm
+
       - name: Install dependencies
         run: npm install
 
