--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Clean cahce
+        run: npm cache clean --force
+
       - name: Install dependencies
         run: npm install
 
