--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm cache clean --force
 
       - name: Install matterbridgee
-        run: npm install -g matterbridge --no-cache --force
+        run: npm install -g matterbridge --force
 
       - name: Install dependencies
         run: npm install
