--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridge.test.ts",
     "test:device": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridgeDevice.test.ts",
     "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
-    "test:plugins": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose plugins.test.ts",
+    "test:plugins": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage plugins.test.ts",
     "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose utils.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
