--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.3.23",
+  "version": "1.3.24",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -35,7 +35,9 @@
     "siri",
     "google-home",
     "alexa",
-    "homeassistant"
+    "homeassistant",
+    "smartthings",
+    "ewelink"
   ],
   "type": "module",
   "main": "dist/index.js",
