--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -11,7 +11,7 @@ RUN apk add --no-cache nodejs npm icu-data-full
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci --no-audit --no-update-notifier --no-fund && \
+RUN npm install --no-audit --no-update-notifier --no-fund && \
     npm run build && \
     npm link
 
