--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,9 +15,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Verify Node.js version
+        run: node -v
+    
+      - name: Verify Npm version
+        run: npm -v
+                
       - name: Install dependencies
         run: npm install
     
