--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x, 21.x, 22.x]
+        node-version: [18.x, 20.x, 22.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }} 
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Verify Node.js version
+        run: node -v
+  
+      - name: Verify Npm version
+        run: npm -v
+              
       - name: Clean cache
         run: npm cache clean --force
 
