--- a/docker/Dockerfile.shelly
+++ b/docker/Dockerfile.shelly
@@ -16,6 +16,11 @@ RUN npm install --no-audit --no-update-notifier --no-fund && \
 # Install Matterbridge plugins
 RUN npm -g install matterbridge-shelly
 
+# Copy and execute the entrypoint script
+COPY ./docker/shellyEntrypoint.sh ./
+RUN chmod +x /shellyEntrypoint.sh
+ENTRYPOINT ["/shellyEntrypoint.sh"]
+
 # Node modules: /usr/local/lib/node_modules/matterbridge/dist/cli.js
 # Bin: /usr/local/bin/matterbridge
-CMD ["/usr/local/bin/matterbridge", "-bridge", "-docker"]
+CMD ["matterbridge", "-bridge", "-docker"]
