--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -47,10 +47,10 @@ jobs:
       run: |
         docker buildx build \
           --platform linux/arm64 \
-          -f docker/Dockerfile.shelly \
-          -t luligu/matterbridge:dev_shelly \
+          -f docker/Dockerfile.shelly.alpine \
+          -t luligu/matterbridge:dev_shelly_alpine \
           --push .
-        docker manifest inspect luligu/matterbridge:dev_shelly
+        docker manifest inspect luligu/matterbridge:dev_shelly_alpine
       timeout-minutes: 60 
   
     - name: Run Docker Buildx on dev_alpine
