--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -27,4 +27,4 @@ RUN npm -g install matterbridge-eve-weather
 # WORKDIR /app
 # Node modules: /usr/local/lib/node_modules/matterbridge/dist/cli.js
 # Bin: /usr/local/bin/matterbridge
-CMD ["/usr/local/bin/matterbridge", "-bridge", "-docker"]
+CMD ["/usr/local/bin/matterbridge", "-docker"]
