--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.5.0-beta7",
+  "version": "1.5.0-beta8",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -119,7 +119,7 @@
     "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier",
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest"
   },
-  "overrides": {
+  "xxxoverrides": {
     "eslint": "latest"
   },
   "dependencies": {
@@ -134,7 +134,7 @@
     "ws": "8.18.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.9.0",
+    "@eslint/js": "9.9.1",
     "@types/archiver": "6.0.2",
     "@types/eslint__js": "8.42.3",
     "@types/express": "4.17.21",
@@ -147,7 +147,7 @@
     "jest": "29.7.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
-    "ts-jest": "29.2.4",
+    "ts-jest": "29.2.5",
     "typescript": "5.5.4",
     "typescript-eslint": "8.2.0"
   }
